# plasma-timekeeper

./: CMakeLists.txt  README.md  TODO
src/: CMakeLists.txt
src/declarative/: CMakeLists.txt  Messages.sh  activitymodel.cpp  activitymodel.h  activitysortmodel.cpp  activitysortmodel.h  qmldir  qmlplugins.cpp  qmlplugins.h
src/plasma/: CMakeLists.txt  Messages.sh  metadata.desktop  metadata.desktop.cmake
src/plasma/contents/config/: config.qml  main.xml
src/plasma/contents/ui/: ActivityItem.qml  CompactRepresentation.qml  ConfigGeneral.qml  PopupDialog.qml  main.qml
